--- a/css/home.css
+++ b/css/home.css
@@ -30,7 +30,7 @@
 }
 
 #container-price {
-    height: 100vh;
+    height: 180vh;
     background-color: #FFDFD4;
 
 }
@@ -66,7 +66,11 @@ box-shadow: 10px 10px 72px 9px rgba(0,0,0,0.28);
 }
 #price-plan-price{
     background-color: #221E1C;
-    border-radius: 25px;
+    border-radius: 20px;
+}
+#price-desc-background{
+    background-color: #FF9372;
+    border-radius: 20px;
 }
 .button-plan{
     background-color: #FF0000;
