--- a/css/home.css
+++ b/css/home.css
@@ -98,3 +98,21 @@ box-shadow: 10px 10px 72px 9px rgba(0,0,0,0.28);
 border-radius: 15px;
 background-color: #B59E96;
 }
+.gradient-text{
+    color: #FF9E81;
+    background: -webkit-linear-gradient(left,#FF7B5A,#FF0000,#FF0000,#FF7B5A);
+    background-size: 1600px 200px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation-name: animationgradienttitle;
+      -webkit-animation: animationgradienttitle 5s infinite linear;
+  }
+
+  @keyframes animationgradienttitle {
+    0% {
+        background-position: 0 1600px;
+    }
+    100% {
+        background-position: 1600px 0;
+    }
+  }
