--- a/css/home.css
+++ b/css/home.css
@@ -28,18 +28,68 @@ path{
 
 /* TESTE */
 
-.getstarted {
+/* .getstarted {
     border-radius: 30px;
     background-color: #FF0000;
     
 }
 .getstarted:hover{
     background-color: #86360E;
-}
+} */
+
+.getstarted {
+    height: 50px;
+    transform: translate(-0%,-0%);
+    
+    box-sizing: border-box;
+    /* background: linear-gradient(90deg,#dd1818, #333333, #dd1818);   */
+    /* background-color: #dd1818; */
+    background: linear-gradient(90deg,#DE3F3F,#720E0E,#E92828);
+    text-align: center;
+    background-size: 400%;
+    border-radius: 25px;
+    z-index: 1; 
+   }
+   
+   .getstarted:hover {
+    animation: animate 5s linear infinite;
+   }
+   
+   @keyframes animate {
+    0% {   
+     background-position: 0%;   
+    }
+
+    100% {  
+        background-position: 400%;
+       }
+   
+   }
+   
+   .getstarted:before {  
+    content: '';  
+    position: absolute;   
+    top: -10px;   
+    bottom: -10px;   
+    right: -10px;     
+    left: -10px;   
+    z-index: -1;   
+    background: linear-gradient(90deg,#DE3F3F,#720E0E,#E92828);
+    background-size: 400%;   
+    border-radius: 40px;  
+    filter: blur(20px);   
+    opacity: 0;  
+    transition: 0.5s;  
+   }
+   
+   .getstarted:hover:before { 
+    filter: blur(20px); 
+    opacity: 1;  
+    animation: animate 8s linear infinite;  
+   }
 
 #row {
     position: absolute;
-
     margin-left: 15%;
     margin-right: 15%;
 }
@@ -92,13 +142,16 @@ box-shadow: 10px 10px 72px 9px rgba(0,0,0,0.28);
 .button-plan{
     background-color: #FF0000;
     border-radius: 25px;
-    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
     transition-duration: 0.6s;
 }
 .button-plan:hover{
     background-color: #86360E;
+    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
+    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
 }
 #desc-title{
 border-radius: 15px;
