--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,8 @@
 .text-font{
     color: #FFDFD4;
-    font-family: 'Quicksand', sans-serif;
 }
-p{
+
+.quicksand{
     font-family: 'Quicksand', sans-serif;
 }
 
