add information price and resize container auth

--- a/css/auth.css
+++ b/css/auth.css
@@ -3,7 +3,7 @@
 }
 #login-container{
     /* background-image: linear-gradient(#FF0000, #FF5232,#FF7B5A); */
-    background-color: #FF9E81;
+    background-color: #685C57;
     border-radius: 25px;
     width: 30em;
 }
