--- a/css/auth.css
+++ b/css/auth.css
@@ -1,9 +1,12 @@
 #background{
+    /* background-color: #FFDFD4; */
+    
     background-color: #FFDFD4;
 }
 #login-container{
     /* background-image: linear-gradient(#FF0000, #FF5232,#FF7B5A); */
     background-color: #685C57;
+
     border-radius: 25px;
     width: 30em;
 }
@@ -18,15 +21,4 @@
 }
 .login-campo:hover{
     opacity: 0.9;
-}
-.button{
-    background-color: #221E1C;
-    border-radius: 25px;
-    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.75);
-    transition-duration: 0.6s;
-}
-.button:hover{
-    background-color: #86360E;
 }
