--- a/css/home.css
+++ b/css/home.css
@@ -8,15 +8,16 @@
 
 .navbar{
     background: #685C57;
+    /* background: #1d2b30; Cinza azulado*/
 }
 .nav-item:hover{
     background-color: #47403c;
 }
 
-@font-face {
+/* @font-face {
     font-family: Fabada;
     src: url(/src/font/Fabada-regular.ttf);
-  }
+  } */
 
 #fundo {
     padding-top: 30px;
@@ -27,7 +28,7 @@ path{
     fill: url(#gradient)
    }
    
-.gradientbutton {
+.gradientbutton-red {
     height: 50px;
     transform: translate(-0%,-0%);
     
@@ -43,7 +44,7 @@ path{
     z-index: 1; 
    }
    
-   .gradientbutton:hover {
+   .gradientbutton-red:hover {
     -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.7);
     -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.7);
     box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.7);
@@ -60,7 +61,7 @@ path{
 
    }
    
-   .gradientbutton:before {  
+   .gradientbutton-red:before {  
     content: '';  
     position: absolute;   
     top: -5px;   
@@ -76,7 +77,30 @@ path{
     opacity: 1;  
     animation: animate 8s linear infinite;  
    }
-   
+
+   .button-black{
+       background-color: #221E1C;
+       border-radius: 25px;
+   }
+   .button-black:hover{
+        background-color: #86360E;
+   }
+
+   .button-red{
+    background-color: #FF0000;
+    border-radius: 25px;
+    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
+    transition-duration: 0.6s;
+    }
+    .button-red:hover{
+        background-color: #86360E;
+        -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
+        -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
+        box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
+    }
+
 #row {
     position: absolute;
     margin-left: 15%;
@@ -136,20 +160,7 @@ path{
     background-color: #FF9372;
     border-radius: 20px;
 }
-.button-plan{
-    background-color: #FF0000;
-    border-radius: 25px;
-    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
-    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
-    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.55);
-    transition-duration: 0.6s;
-}
-.button-plan:hover{
-    background-color: #86360E;
-    -webkit-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
-    -moz-box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
-    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
-}
+
 #desc-title{
 border-radius: 15px;
 background-color: #B59E96;
