--- a/css/home.css
+++ b/css/home.css
@@ -107,8 +107,14 @@ path{
     margin-right: 15%;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+  
 #container-price {
     background-color: #FFDFD4;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 #footer-services-backgroud{
     background-image: linear-gradient(#3C3532,#685C57);
