--- a/css/home.css
+++ b/css/home.css
@@ -165,6 +165,11 @@ html {
     border-radius: 20px;
 }
 
+.table-sudo{
+    background-color: #FF7B5A;
+
+    }
+
 #desc-title{
 border-radius: 15px;
 background-color: #B59E96;
