--- a/css/home.css
+++ b/css/home.css
@@ -14,6 +14,15 @@
     background-color: #47403c;
 }
 
+.row{
+    margin: 0px;
+}
+
+.prices-getstarted{
+    background-color: #FFDFD4;
+    max-width: 15em; 
+    border-radius: 10px;
+}
 /* @font-face {
     font-family: Fabada;
     src: url(/src/font/Fabada-regular.ttf);
@@ -101,12 +110,6 @@ path{
         box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 1.0);
     }
 
-#row {
-    position: absolute;
-    margin-left: 15%;
-    margin-right: 15%;
-}
-
 html {
     scroll-behavior: smooth;
   }
@@ -120,6 +123,7 @@ html {
 #footer-services-title{
     color: #FF5232;
 }
+
 #footer-license-background{
     background-color: #221E1C;
 }
@@ -127,6 +131,7 @@ html {
     background-image: linear-gradient(#FF0000,#FF5232);
 }
 #price-title-container{
+    max-width: 70vw;
     background: -webkit-linear-gradient(right,#8E0E00,#1F1C18);
     background-size: 400%;
     animation-name: animationgradient;
